[package]
name = "misspell"
version = "0.2.0"
authors = ["z0mbie42 <sylvain@kerkour.com>"]
edition = "2018"
homepage = "https://github.com/bloom42/misspell"
repository = "https://github.com/bloom42/misspell.git"
description = "Correct commonly misspelled English words in source files 📖"
keywords = ["misspell", "bloom", "orthography", "cli"]
license = "Apache-2.0"

[dependencies]
ignore = "0.4"
clap = "2.32"
