[package]
name = "phaser"
version = "0.1.2"
authors = ["z0mbie42 <sylvain@kerkour.com>"]
edition = "2018"
homepage = "https://github.com/bloom42/phaser"
repository = "https://github.com/bloom42/phaser.git"
description = "Security scanner 🔍"
keywords = ["security", "bloom", "phaser", "scanner"]
license-file = "LICENSE.txt"

[dependencies]
clap = "2.32.0"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
log = "0.4"
env_logger = "0.6"
dotenv = "0.13.0"
rusoto_core = "0.36.0"
rusoto_sqs = "0.36.0"
rusoto_s3 = "0.36.0"
sentry = "0.12.0"
chrono = "0.4"
serde-xml-rs = "0.2.1"
