[package]
name = "bloom42_res"
version = "0.1.0"
authors = ["z0mbie42 <sylvain@kerkour.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/bloom42/res"
repository = "https://github.com/bloom42/res"
description = "Rust Event Sourcing made easy"
keywords = ["bloom", "event sourcing", "easy"]

[dependencies]
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
diesel = { version = "1.3.3", features = ["postgres", "uuid", "serde_json", "chrono"] }
dotenv = "0.13"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.2"



[dev-dependencies]
bloom42_diesel_as_jsonb = "0.1.2"


[[example]]
name = "bank"
