[package]
name = "simpleserver"
version = "0.1.0"
authors = ["skerkour <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.0", features = [ "runtime-actix-rustls", "uuid", "json", "postgres", "migrate", "chrono", "time", "ipnetwork" ] }
# tokio = "*"
async-trait = "0.1.42"
actix-web = "3"
env_logger = "0.7"
serde_json = "1"
log = "0.4"
serde = { version = "1.0.43", features = ["derive"] }
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "f3170c7adf4405cc119d2129f78a591fe2fcd32b"}
anyhow = "1.0"
futures = "*"


[profile.release]
lto = true
debug = false
debug-assertions = false
codegen-units = 1
